[package]
name = "proof"
version = "0.1.0"
edition = "2024"

[dependencies]
clap  = { version =  "4.5.48", features = ["derive"] }
reqwest  = { version =  "0.12.23", features = [] }
serde  = { version =  "1", features = ["derive"] }
thiserror  = { version =  "2.0.17", features = [] }
tokio  = { version =  "1.47.1", features = ["full"] }
toml  = { version =  "0.9.7", features = [] }
futures  = { version =  "0.3", features = [] }
serde_json  = { version =  "1", features = [] }

