[package]
name = "proof"
version = "0.1.0"
edition = "2024"

[features]
slow = []

[dependencies]
clap  = { version =  "4.5.48", features = ["derive"] }
flume  = { version =  "0.11.1", features = ["async"] }
futures  = { version =  "0.3", features = [] }
indicatif  = { version =  "0.18.0", features = ["in_memory"] }
miette = { version = "7.6.0", features = ["fancy", "serde"] }
reqwest  = { version =  "0.12.23", features = [] }
serde  = { version =  "1", features = ["derive"] }
serde_json  = { version =  "1", features = [] }
thiserror  = { version =  "2.0.17", features = [] }
tokio  = { version =  "1.47.1", features = ["full"] }
toml  = { version =  "0.9.7", features = [] }
url  = { version =  "2.5.7", features = [] }

